# GrokForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  about.hbs  about.toml  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.grokforge/commands/: verify.md
.grokforge/skills/grokforge-development/: SKILL.md
assets/: asci.txt
crates/grokforge/: Cargo.toml
crates/grokforge-config/: Cargo.toml
crates/grokforge-config/src/: lib.rs
crates/grokforge-context/: Cargo.toml
crates/grokforge-context/src/: lib.rs
crates/grokforge-core/: Cargo.toml
crates/grokforge-core/src/: agents_md.rs  approvals.rs  attach.rs  cancellation.rs  commands.rs  compaction.rs  context.rs  lib.rs  mcp_config.rs  memory.rs  path_safety.rs  redaction.rs  session.rs  skills.rs  store.rs  turn.rs
crates/grokforge-core/src/tools/: builtins.rs  mcp.rs  mod.rs
crates/grokforge-core/tests/: agent_loop.rs
crates/grokforge-git/: Cargo.toml
crates/grokforge-git/src/: lib.rs
crates/grokforge-mcp/: Cargo.toml
crates/grokforge-mcp/src/: lib.rs
crates/grokforge-protocol/: Cargo.toml
crates/grokforge-protocol/src/: approval.rs  event.rs  ids.rs  items.rs  ledger.rs  lib.rs  op.rs  sandbox.rs  usage.rs
crates/grokforge-render/: Cargo.toml
crates/grokforge-render/src/: lib.rs
crates/grokforge-sandbox/: Cargo.toml  README.md
crates/grokforge-sandbox/src/: bubblewrap.rs  classifier.rs  exec.rs  lib.rs  passthrough.rs  privacy.rs  protected.rs  seatbelt.rs  unreadable.rs  writable.rs
crates/grokforge-test-support/: Cargo.toml
crates/grokforge-test-support/src/: lib.rs  mock.rs
crates/grokforge-tui/: Cargo.toml
crates/grokforge-tui/src/: app.rs  approver.rs  brand.rs  lib.rs
crates/grokforge-xai/: Cargo.toml
crates/grokforge-xai/src/: client.rs  error.rs  event.rs  lib.rs  model.rs  oauth.rs  oauth_callback.html  request.rs  stream.rs
crates/grokforge-xai/tests/: streaming.rs
crates/grokforge/src/: acp.rs  credentials.rs  debug.rs  doctor.rs  headless.rs  main.rs  sessions.rs  tui.rs
docs/decisions/: 0001-name-and-license.md  0002-jsonl-canonical-persistence.md  0003-ledger-two-layer-choke-point.md  0004-privacy-claim-equals-test.md  0005-acp-deferred.md
docs/design/: 01-tech-brief.md  02-architecture.md  03-roadmap.md  04-ux-spec.md  05-critique.md  strategy.md
docs/testing/: terminal-matrix.md
