[package]
name = "grokforge-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed GrokForge config layering and provider/model runtime defaults."

[lints]
workspace = true

[dependencies]
directories = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
tempfile = { workspace = true }
