[package]
name = "grokforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent loop, tools, approval engine, context assembler + redaction, compaction, sessions, subagents."

[lints]
workspace = true
