[package]
name = "grokforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent loop, tools, approval engine, context assembler + redaction, compaction, sessions, subagents."

[lints]
workspace = true

[dependencies]
grokforge-protocol = { workspace = true }
grokforge-xai = { workspace = true }
grokforge-sandbox = { workspace = true }
grokforge-git = { workspace = true }
grokforge-mcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
directories = { workspace = true }
fs4 = { version = "1.1", default-features = false, features = ["sync"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
grokforge-test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
