[package]
name = "grokforge-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "gix reads; git-CLI mutations from the trusted host process; auto-commit, undo, worktrees."

[lints]
workspace = true
