[package]
name = "grokforge-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Git reads and host-process mutations: auto-commit, undo, worktrees."

[lints]
workspace = true

[dependencies]
grokforge-protocol = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
