[package]
name = "grokforge-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-function streaming markdown/diff render pipeline."

[dependencies]
pulldown-cmark.workspace = true

[lints]
workspace = true
