[package]
name = "grokforge-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SandboxPolicy compilation, per-OS backends (Landlock/seccomp, Seatbelt), denial classifier, and sandboxed process exec."

[lints]
workspace = true

[dependencies]
grokforge-protocol = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
