[package]
name = "grokforge-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SandboxPolicy compilation, bubblewrap/Seatbelt backends, denial classification, and sandboxed process execution."

[lints]
workspace = true

[dependencies]
grokforge-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }
tempfile = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
