[package]
name = "grokforge-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ratatui terminal frontend."

[lints]
workspace = true

[dependencies]
grokforge-protocol = { workspace = true }
grokforge-core = { workspace = true }
grokforge-sandbox = { workspace = true }
grokforge-git = { workspace = true }
grokforge-xai = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
