[package]
name = "grokforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Open-source terminal coding agent for Grok — local-first, sandboxed, git-native."
default-run = "grokforge"

[[bin]]
name = "grokforge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
grokforge-protocol = { workspace = true }
grokforge-core = { workspace = true }
grokforge-sandbox = { workspace = true }
grokforge-tui = { workspace = true }
grokforge-xai = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
