[package]
name = "grokforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Open-source terminal coding agent for Grok — local-first, sandboxed, git-native."
default-run = "grokforge"

[[bin]]
name = "grokforge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
grokforge-protocol = { workspace = true }
grokforge-core = { workspace = true }
grokforge-sandbox = { workspace = true }
grokforge-git = { workspace = true }
grokforge-tui = { workspace = true }
grokforge-xai = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
rpassword = { workspace = true }

# Keyring platform backends are opt-in in keyring 3.x; gate per-OS so each target only pulls
# the backend it can build (macOS Keychain / Windows Credential Manager / Linux Secret Service).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }

[dev-dependencies]
tempfile = { workspace = true }
grokforge-test-support = { workspace = true }
