[package]
name = "grokforge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Open-source terminal coding agent for Grok — local-first, sandboxed, git-native."
default-run = "grokforge"

[[bin]]
name = "grokforge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
grokforge-protocol = { workspace = true }
grokforge-config = { workspace = true }
grokforge-core = { workspace = true }
grokforge-sandbox = { workspace = true }
grokforge-git = { workspace = true }
grokforge-tui = { workspace = true }
grokforge-xai = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rpassword = { workspace = true }
directories = { workspace = true }
# Credentials are kept in a password-encrypted file on the host (no OS keychain):
# Argon2 derives the key from the password + a random salt, ChaCha20-Poly1305 encrypts.
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
grokforge-test-support = { workspace = true }
